deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  labels:
    app: hello-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: hello-app
        image: ghcr.io/kehindejejelaye/hello-app:253b24451d103926514e58f182161c95fddee443
        ports:
        - containerPort: 8080
