db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
